fix: stabilize backend e2e regressions for Java 25
Align Flyway/Postgres migrations, tenant-aware reminder/provider flows, and integration tests to restore reliable backend E2E behavior.

Co-authored-by: Cursor <cursoragent@cursor.com>